--- a/task.yml
+++ b/task.yml
@@ -11,9 +11,9 @@
        src: target
        dest: /home/ansadmin
     - name : Build image
-      command: docker build -t ashokit/mavenwebapp .
+      command: docker build -t kanchangajre/devproject .
     - name : Push Docker Image
-      command: docker push ashokit/mavenwebapp
+      command: docker push kanchangajre/devproject
 - name: Second Play - K8s Deployment
   hosts: eks
   tasks:
