--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>in.kanchangajre</groupId>
   <artifactId>01-dev_project</artifactId>
   <packaging>war</packaging>
-  <version>3.0-RELEASE</version>
+  <version>3.0-SNAPSHOT</version>
   <name>01-dev_project</name>
   <url>http://maven.apache.org</url>
  
